bidcontrollerIT + inserts test autres controllers